# name_matching

./: .coverage  .gitignore  AGENTS.md  README.md  collections.ipynb  commands.txt  company_matching.ipynb  lint_and_test.sh  noxfile.py  pyproject.toml
.github/workflows/: main.yml
archived_notebooks/: hnsw_company_network_visualization.html  hnsw_graph_search.ipynb  hnsw_graph_vis2.ipynb
archived_src/name_matching/: __init__.py  cli.py  db.py  embeddings.py  loader.py  main.py
archived_tests/: test_cli.py  test_db.py  test_embeddings.py
data/: company_embeddings.json  updated_test_companies.csv
notebooks/: collections.ipynb
src/name_matching/: __init__.py  cli.py  db.py  embeddings.py  generate_embeddings.py  index_to_qdrant.py  loader.py  main.py  matcher.py  qdrant_101.py  search_qdrant.py
tests/: conftest.py  test_cli.py  test_db.py  test_embeddings.py  test_loader.py  test_main.py  test_matcher.py
