[project]
name = "name-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "nox>=2024.4.15",
]

[project.scripts]
name-matching = "name_matching.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "ARG",
    "C4",
]
