[project]
name = "name-matching"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.84.0",
    "python-dotenv>=1.1.0",
    "chromadb>=1.0.12",
    "rapidfuzz>=3.13.0",
    "faker>=37.3.0",
    "hnswlib>=0.8.0",
    "numpy>=2.2.6",
    "sentence-transformers>=4.1.0",
    "pyvis>=0.3.2",
    "qdrant-client>=1.14.2",
    "pandas>=2.3.0",
]

[project.scripts]
name-matching = "name_matching.main:main"
name_matching = "name_matching.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "ARG",
    "C4",
]

[dependency-groups]
dev = [
    "nox>=2025.5.1",
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.1.0",
    "nox>=2024.4.15",
    "ipykernel>=6.29.5",
]
